@@ -16,6 +16,8 @@ import javax.ws.rs.NotFoundException;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Response;
 
+import com.bakdata.conquery.mode.ImportHandler;
+import com.bakdata.conquery.mode.StorageListener;
 import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Column;
 import com.bakdata.conquery.models.datasets.Dataset;
@@ -29,26 +31,15 @@ import com.bakdata.conquery.models.datasets.concepts.StructureNode;
 import com.bakdata.conquery.models.datasets.concepts.filters.specific.SelectFilter;
 import com.bakdata.conquery.models.datasets.concepts.select.connector.specific.MappableSingleColumnSelect;
 import com.bakdata.conquery.models.exceptions.ValidatorHelper;
-import com.bakdata.conquery.models.identifiable.IdMutex;
 import com.bakdata.conquery.models.identifiable.Identifiable;
 import com.bakdata.conquery.models.identifiable.ids.specific.ConceptId;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
-import com.bakdata.conquery.models.identifiable.ids.specific.DictionaryId;
 import com.bakdata.conquery.models.identifiable.ids.specific.TableId;
 import com.bakdata.conquery.models.identifiable.mapping.EntityIdMap;
 import com.bakdata.conquery.models.index.InternToExternMapper;
 import com.bakdata.conquery.models.index.search.SearchIndex;
-import com.bakdata.conquery.models.jobs.ImportJob;
 import com.bakdata.conquery.models.jobs.JobManager;
 import com.bakdata.conquery.models.jobs.SimpleJob;
-import com.bakdata.conquery.models.messages.namespaces.specific.RemoveConcept;
-import com.bakdata.conquery.models.messages.namespaces.specific.RemoveImportJob;
-import com.bakdata.conquery.models.messages.namespaces.specific.RemoveSecondaryId;
-import com.bakdata.conquery.models.messages.namespaces.specific.RemoveTable;
-import com.bakdata.conquery.models.messages.namespaces.specific.UpdateConcept;
-import com.bakdata.conquery.models.messages.namespaces.specific.UpdateMatchingStatsMessage;
-import com.bakdata.conquery.models.messages.namespaces.specific.UpdateSecondaryId;
-import com.bakdata.conquery.models.messages.namespaces.specific.UpdateTable;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.univocity.parsers.csv.CsvParser;
@@ -64,16 +55,16 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor(onConstructor_ = {@Inject})
 public class AdminDatasetProcessor {
 
-
 	public static final int MAX_IMPORTS_TEXT_LENGTH = 100;
 	private static final String ABBREVIATION_MARKER = "\u2026";
 
 	private final ConqueryConfig config;
 	private final Validator validator;
-	private final DatasetRegistry datasetRegistry;
+	private final DatasetRegistry<? extends Namespace> datasetRegistry;
 	private final JobManager jobManager;
+	private final ImportHandler importHandler;
+	private final StorageListener storageListener;
 
-	private final IdMutex<DictionaryId> sharedDictionaryLocks = new IdMutex<>();
 
 	/**
 	 * Creates and initializes a new dataset if it does not already exist.
@@ -127,8 +118,7 @@ public class AdminDatasetProcessor {
 		log.info("Received new SecondaryId[{}]", secondaryId.getId());
 
 		namespace.getStorage().addSecondaryId(secondaryId);
-
-		namespace.sendToAll(new UpdateSecondaryId(secondaryId));
+		storageListener.onAddSecondaryId(secondaryId);
 	}
 
 	/**
@@ -141,7 +131,7 @@ public class AdminDatasetProcessor {
 		final List<Column> dependents = namespace.getStorage().getTables().stream()
 												 .map(Table::getColumns).flatMap(Arrays::stream)
 												 .filter(column -> secondaryId.equals(column.getSecondaryId()))
-												 .collect(Collectors.toList());
+												 .toList();
 
 		if (!dependents.isEmpty()) {
 			final Set<TableId> tables = dependents.stream().map(Column::getTable).map(Identifiable::getId).collect(Collectors.toSet());
@@ -157,7 +147,7 @@ public class AdminDatasetProcessor {
 		log.info("Deleting SecondaryId[{}]", secondaryId);
 
 		namespace.getStorage().removeSecondaryId(secondaryId.getId());
-		namespace.sendToAll(new RemoveSecondaryId(secondaryId));
+		storageListener.onDeleteSecondaryId(secondaryId);
 	}
 
 	/**
@@ -182,7 +172,7 @@ public class AdminDatasetProcessor {
 		ValidatorHelper.failOnError(log, validator.validate(table));
 
 		namespace.getStorage().addTable(table);
-		namespace.sendToAll(new UpdateTable(table));
+		storageListener.onAddTable(table);
 	}
 
 
@@ -219,7 +209,7 @@ public class AdminDatasetProcessor {
 
 		// Register the Concept in the ManagerNode and Workers
 		datasetRegistry.get(dataset.getId()).getStorage().updateConcept(concept);
-		getJobManager().addSlowJob(new SimpleJob(String.format("sendToAll : Add %s ", concept.getId()), () -> namespace.sendToAll(new UpdateConcept(concept))));
+		storageListener.onAddConcept(concept);
 	}
 
 
@@ -268,55 +258,24 @@ public class AdminDatasetProcessor {
 	/**
 	 * Reads an Import partially Importing it if not yet present, then submitting it for full import.
 	 */
-	@SneakyThrows
 	public void addImport(Namespace namespace, InputStream inputStream) throws IOException {
-
-		ImportJob job = ImportJob.createOrUpdate(namespace, inputStream, config.getCluster().getEntityBucketSize(), sharedDictionaryLocks, config, false);
-		namespace.getJobManager().addSlowJob(job);
-
-		clearDependentConcepts(namespace.getStorage().getAllConcepts(), job.getTable());
+		this.importHandler.addImport(namespace, inputStream);
 	}
 
 	/**
 	 * Reads an Import partially Importing it if it is present, then submitting it for full import [Update of an import].
 	 */
-	@SneakyThrows
 	public void updateImport(Namespace namespace, InputStream inputStream) throws IOException {
-
-		ImportJob job = ImportJob.createOrUpdate(namespace, inputStream, config.getCluster().getEntityBucketSize(), sharedDictionaryLocks, config, true);
-
-		namespace.getJobManager().addSlowJob(job);
-
-		clearDependentConcepts(namespace.getStorage().getAllConcepts(), job.getTable());
+		this.importHandler.updateImport(namespace, inputStream);
 	}
 
 	/**
 	 * Deletes an import.
 	 */
 	public synchronized void deleteImport(Import imp) {
-		final Namespace namespace = datasetRegistry.get(imp.getTable().getDataset().getId());
-
-		clearDependentConcepts(namespace.getStorage().getAllConcepts(), imp.getTable());
-
-
-		namespace.getStorage().removeImport(imp.getId());
-		namespace.sendToAll(new RemoveImportJob(imp));
-
-		// Remove bucket assignments for consistency report
-		namespace.removeBucketAssignmentsForImportFormWorkers(imp);
+		this.importHandler.deleteImport(imp);
 	}
 
-	private void clearDependentConcepts(Collection<Concept<?>> allConcepts, Table table) {
-		for (Concept<?> c : allConcepts) {
-			for (Connector con : c.getConnectors()) {
-				if (!con.getTable().equals(table)) {
-					continue;
-				}
-
-				con.getConcept().clearMatchingStats();
-			}
-		}
-	}
 
 	/**
 	 * Deletes a table if it has no dependents or not forced to do so.
@@ -339,7 +298,7 @@ public class AdminDatasetProcessor {
 					 .forEach(this::deleteImport);
 
 			namespace.getStorage().removeTable(table.getId());
-			namespace.sendToAll(new RemoveTable(table));
+			storageListener.onRemoveTable(table);
 		}
 
 		return dependentConcepts.stream().map(Concept::getId).collect(Collectors.toList());
@@ -352,8 +311,7 @@ public class AdminDatasetProcessor {
 		final Namespace namespace = datasetRegistry.get(concept.getDataset().getId());
 
 		namespace.getStorage().removeConcept(concept.getId());
-		getJobManager()
-				.addSlowJob(new SimpleJob("sendToAll: remove " + concept.getId(), () -> namespace.sendToAll(new RemoveConcept(concept))));
+		storageListener.onDeleteConcept(concept);
 	}
 
 	/**
@@ -368,12 +326,8 @@ public class AdminDatasetProcessor {
 				"Initiate Update Matching Stats and FilterSearch",
 				() -> {
 
-					final Collection<Concept<?>> concepts = ns.getStorage().getAllConcepts()
-															  .stream()
-															  .filter(concept -> concept.getMatchingStats() == null)
-															  .collect(Collectors.toSet());
 
-					ns.sendToAll(new UpdateMatchingStatsMessage(concepts));
+					storageListener.onUpdateMatchingStats(dataset);
 					ns.getFilterSearch().updateSearch();
 					ns.updateInternToExternMappings();
 				}
@@ -404,13 +358,13 @@ public class AdminDatasetProcessor {
 
 		final Set<Concept<?>> dependentConcepts = namespace.getStorage().getAllConcepts().stream()
 														   .filter(
-																	c -> c.getSelects().stream()
-																		  .filter(MappableSingleColumnSelect.class::isInstance)
+																   c -> c.getSelects().stream()
+																		 .filter(MappableSingleColumnSelect.class::isInstance)
 
-																		  .map(MappableSingleColumnSelect.class::cast)
-																		  .map(MappableSingleColumnSelect::getMapping)
-																		  .anyMatch(internToExternMapper::equals)
-															)
+																		 .map(MappableSingleColumnSelect.class::cast)
+																		 .map(MappableSingleColumnSelect::getMapping)
+																		 .anyMatch(internToExternMapper::equals)
+														   )
 														   .collect(Collectors.toSet());
 
 		if (force || dependentConcepts.isEmpty()) {
